Bug 313443. Show caret moved events reliably. r=ginn.chen, sr=neil